Add readme, license and update setup.cfg metadata.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 
 [metadata]
 name = pyglm-typing
-version = 0.0.1
+version = 0.1.0
 author = Erik Soma
 author_email = stillusingirc@gmail.com
 url = https://github.com/esoma/pyglm-typing
-description = Python game engine
-;long_description = file: README.md, LICENSE
+description = Type stubs for PyGLM
+long_description = file: README.md, LICENSE
 license = MIT
 classifiers =
     License :: OSI Approved :: MIT License
