Fix packaging of stub files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 
 [metadata]
 name = pyglm-typing
-version = 0.1.0
+version = 0.1.1
 author = Erik Soma
 author_email = stillusingirc@gmail.com
 url = https://github.com/esoma/pyglm-typing
@@ -20,18 +20,11 @@ classifiers =
     Intended Audience :: Developers
 
 [options]
-python_requires = >= 3.6
 package_dir =
      = src
-packages = find:
+packages = glm-stubs, glm_typing
 install_requires =
     pyglm>=2.5
-
-[options.packages.find]
-where = src
-
-[options.package_data]
-glm_typing = py.typed
 
 [flake8]
 ignore = E, F, W, T
